--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
           <a href="./index.html" class="aba">Home</a>
           <a href="#github" class="aba">Habilidades</a>
-          <a href="#sobre" class="aba">Sobre </a>
+          <a href="#Design" class="aba">Sobre </a>
           <a href="#Contato" class="aba">Contato</a>
         </div>
       </div>
@@ -40,14 +40,14 @@
           <span id="antes">Status:</span>
           <span class="cor" id="typewriter"></span>
           <br /><br />
-          <p>
+          <p id="text">
             Olá! Meu nome é Alexandre Gamboa, sou um desenvolvedor Full-Stack e
-            analista <br />
-            de dados apaixonado por criar soluções inovadoras e eficientes. Com
-            experiência <br />
+            analista
+            de dados, apaixonado por criar soluções inovadoras e eficientes. Com
+            experiência
             em diversas tecnologias, estou sempre em busca de novos desafios
-            para aprimorar <br />
-            minhas habilidades e contribuir para o sucesso de projetos
+            para aprimorar
+            minhas habilidades, e contribuir para o sucesso de projetos
             impactantes.
           </p>
           <br />
@@ -168,7 +168,7 @@
           </p>
           <p class="caixa">
             <img src="./icons/paint-brush.png" alt="" /><br />
-            <b>UI/UX Design:</b> <br />
+            <b id="Design">UI/UX Design:</b> <br />
             Canvas, Painting e Figma.
           </p>
         </div>
